# kap-forceps-tracking

./: .gitattributes  .gitignore  README.md  docker-compose.yml  lele.json
microforceps-viz/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
microforceps-viz/feed/: synthetic_feed.py
microforceps-viz/src/: App.jsx  config.js  geometry.js  theme.js  ui.js
orchestrator/: .dockerignore  Dockerfile  __init__.py  app.py  requirements.txt
orchestrator/static/: app.css  app.js
preprocessing/: .dockerignore  Dockerfile  geometry_sidecar_example.json  input_example.json  predicted_input.json  tool_positions.py  viewer.html  ws_client_test.py  ws_server.py
segmentation/: .dockerignore  Dockerfile  README.md  pyproject.toml
segmentation/configs/: forceps_pose.yaml  forceps_seg.yaml  preprocessing.yaml
segmentation/examples/: sample_label.txt
segmentation/scripts/: ablate_channel.py  adaptive_threshold_forceps.py  benchmark.py  check_labels.py  common.py  compare_thresholds.py  extract_avi_frames.py  generate_synthetic_dataset.py  inpaint_retinal_vessels.py  overlay_adaptive_mask.py  pose_to_segments.py  predict.py  predict_preprocessor.py  prepare_preprocessed_dataset.py  preprocessing.py  preview_preprocessing.py  raw_local_contrast.py  remote_train.sh  service.py  split_dataset.py  train.py  validate.py
segmentation/tests/: test_generate_synthetic_dataset.py  test_pose_to_segments.py  test_predict_preprocessor.py  test_predict_rendering.py  test_predict_serialization.py  test_prepare_preprocessed_dataset.py
(+27 files in other folders)
